Fix App - GetHandler - PostHandler